WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67301
Fix snow-leopard regression caused by
r93982
https://bugs.webkit.org/show_bug.cgi?id=67301
Summary
Fix snow-leopard regression caused by r93982
WebKit Review Bot
Reported
2011-08-31 10:50:31 PDT
Fix snow-leopard regression caused by
r93982
Requested by tomz on #webkit.
Attachments
Patch
(1.79 KB, patch)
2011-08-31 10:59 PDT
,
Tom Zakrajsek
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tom Zakrajsek
Comment 1
2011-08-31 10:59:48 PDT
Created
attachment 105795
[details]
Patch
Kenneth Russell
Comment 2
2011-08-31 11:59:57 PDT
Comment on
attachment 105795
[details]
Patch Looks fine to me.
Tom Zakrajsek
Comment 3
2011-08-31 15:36:11 PDT
***
Bug 67319
has been marked as a duplicate of this bug. ***
WebKit Review Bot
Comment 4
2011-08-31 22:49:37 PDT
Comment on
attachment 105795
[details]
Patch Rejecting
attachment 105795
[details]
from commit-queue.
tomz@codeaurora.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
WebKit Review Bot
Comment 5
2011-08-31 23:06:38 PDT
Comment on
attachment 105795
[details]
Patch Clearing flags on attachment: 105795 Committed
r94273
: <
http://trac.webkit.org/changeset/94273
>
WebKit Review Bot
Comment 6
2011-08-31 23:06:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug