Fix snow-leopard regression caused by r93982 https://bugs.webkit.org/show_bug.cgi?id=67301

Patch by Tom Zakrajsek <tomz@codeaurora.org> on 2011-08-31
Reviewed by Kenneth Russell.

Test: canvas/philip/tests/2d.path.stroke.prune.arc.html

* html/canvas/CanvasRenderingContext2D.cpp:
(WebCore::CanvasRenderingContext2D::arc):

Canonical link: https://commits.webkit.org/83182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94273 268f45cc-cd09-0410-ab3c-d52691b4dbfc